# jenkins-jobs-sauce-ondemand

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
jenkins_jobs_sauce_ondemand/: sauce_ondemand.py
tests/: base.py  test_saucelabs.py
tests/fixtures/: saucelabs001.xml  saucelabs001.yaml  saucelabs002.xml  saucelabs002.yaml
