[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = jenkins-jobs-sauce-ondemand
author = Russell Sim
author_email = rsim@zendesk.com
summary = Jenkins Job Builder plugin for SauceLabs Ondemand
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://github.com/zendesk/jenkins-jobs-sauce-ondemand
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    jenkins_jobs_sauce_ondemand

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.wrappers =
    sauce-ondemand-ng=jenkins_jobs_sauce_ondemand.sauce_ondemand:sauce_ondemand
